--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ add_executable(etsuko src/main.cpp
         src/repository.h
         src/events.cpp
         src/events.h
-        src/common.h)
+        src/common.h
+        src/renderer_ex.h)
 
 find_package(SDL2 CONFIG REQUIRED)
 target_link_libraries(etsuko
