Rewrite the whole thing from scratch because I'm bagre

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,37 @@
 cmake_minimum_required(VERSION 4.0)
-project(etsuko)
+project(etsuko C)
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_C_STANDARD 17)
 
-add_executable(etsuko src/main.cpp
-        src/karaoke.cpp
+add_executable(etsuko src/main.c
+        src/etsuko.h
         src/karaoke.h
-        src/audio.cpp
-        src/audio.h
-        src/renderer.h
-        src/parser.cpp
-        src/parser.h
-        src/renderer.cpp
-        src/repository.cpp
+        src/config.h
+        src/config.c
+        src/karaoke.c
         src/repository.h
-        src/events.cpp
+        src/repository.c
+        src/song.h
+        src/etsuko.c
+        src/renderer.h
+        src/renderer.c
+        src/song.c
+        src/str_utils.h
+        src/str_utils.c
+        src/container_utils.h
+        src/container_utils.c
         src/events.h
-        src/common.h
-)
+        src/events.c
+        src/error.h
+        src/error.c
+        src/audio.h
+        src/audio.c
+        src/constants.h
+        src/secret.h
+        src/renderer_ex.h
+        src/renderer_ex.c)
+
+target_compile_options(etsuko PRIVATE -Wall -Wpedantic)
 
 find_package(SDL2 CONFIG REQUIRED)
 target_link_libraries(etsuko
@@ -37,9 +51,14 @@ target_link_libraries(etsuko
 )
 
 find_package(SDL2_image CONFIG REQUIRED)
-target_link_libraries(etsuko PRIVATE $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
+target_link_libraries(etsuko
+        PRIVATE
+        $<IF:$<TARGET_EXISTS:SDL2_image::SDL2_image>,SDL2_image::SDL2_image,SDL2_image::SDL2_image-static>)
 
-target_compile_features(etsuko PRIVATE cxx_std_23)
+find_package(sdl2-gfx CONFIG REQUIRED)
+target_link_libraries(etsuko PRIVATE SDL2::SDL2_gfx)
+
+target_compile_features(etsuko PRIVATE c_std_17)
 
 if(EMSCRIPTEN)
     message(STATUS "Configuring for Emscripten/WebAssembly")
@@ -51,25 +70,38 @@ if(EMSCRIPTEN)
             "SHELL:-sASSERTIONS=1"
             "SHELL:-sEXIT_RUNTIME=0"
             "SHELL:-O3"
-            #"SHELL:-sASYNCIFY=0"
+            "SHELL:-sASYNCIFY=0"
             "SHELL:-sFETCH=1"
-            #"SHELL:-sNO_DISABLE_EXCEPTION_CATCHING=1"
+            "SHELL:-sNO_DISABLE_EXCEPTION_CATCHING=1"
             "SHELL:--shell-file ${CMAKE_SOURCE_DIR}/shell_minimal.html"
-            #"SHELL:-fexceptions"
+            "SHELL:-fexceptions"
+            "SHELL:-sASSERTIONS=1"
             "SHELL:--profiling-funcs"
             "SHELL:--use-preload-plugins"
             # Preload assets directory into virtual FS
-            #"SHELL:--preload-file ${CMAKE_SOURCE_DIR}/assets@/assets"
+            "SHELL:--preload-file ${CMAKE_SOURCE_DIR}/assets@/assets"
     )
 
 else()
     message(STATUS "Configuring regular desktop build")
 
+    target_compile_options(etsuko PRIVATE "-fsanitize=address,undefined")
+    target_compile_options(etsuko PRIVATE "-g")
+    target_compile_options(etsuko PRIVATE "-O2")
+    target_link_options(etsuko PRIVATE "-fsanitize=address,undefined")
     target_link_options(etsuko PRIVATE "-Wl,-dead_strip")
+    target_compile_options(etsuko PRIVATE "-g")
+    target_compile_options(etsuko PRIVATE "-O2")
 
     add_custom_command(TARGET etsuko POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_directory
             ${CMAKE_SOURCE_DIR}/assets
+            $<TARGET_FILE_DIR:etsuko>/assets
+    )
+
+    add_custom_command(TARGET etsuko POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_SOURCE_DIR}/assets_dbg
             $<TARGET_FILE_DIR:etsuko>/assets
     )
 endif()
