Initial draft at re-adding support to vcpkg and hopefully getting it to build under windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,6 @@ set_source_files_properties(src/contrib/stb_image.c PROPERTIES COMPILE_FLAGS "-w
 set_source_files_properties(src/contrib/stb_truetype.c PROPERTIES COMPILE_FLAGS "-w")
 set_source_files_properties(src/contrib/minimp3.c PROPERTIES COMPILE_FLAGS "-w")
 
-target_compile_features(etsuko PRIVATE c_std_23)
-
 if (EMSCRIPTEN)
     message(STATUS "Configuring for Emscripten/WebAssembly")
 
@@ -92,13 +90,13 @@ else ()
     target_link_libraries(etsuko PRIVATE GLEW::GLEW)
 
     # ICU
-    find_path(ICU_INCLUDE_DIR unicode/utf8.h PATHS /opt/homebrew/opt/icu4c@78/include /usr/local/opt/icu4c/include)
-    find_library(ICU_LIBRARY icuuc PATHS /opt/homebrew/opt/icu4c@78/lib /usr/local/opt/icu4c/lib)
-    if (NOT ICU_INCLUDE_DIR OR NOT ICU_LIBRARY)
-        message(FATAL_ERROR "ICU not found")
-    endif ()
-    target_include_directories(etsuko PRIVATE ${ICU_INCLUDE_DIR})
-    target_link_libraries(etsuko PRIVATE ${ICU_LIBRARY})
+    #find_path(ICU_INCLUDE_DIR unicode/utf8.h PATHS /opt/homebrew/opt/icu4c@78/include /usr/local/opt/icu4c/include)
+    #find_library(ICU_LIBRARY icuuc PATHS /opt/homebrew/opt/icu4c@78/lib /usr/local/opt/icu4c/lib)
+    #if (NOT ICU_INCLUDE_DIR OR NOT ICU_LIBRARY)
+    #    message(FATAL_ERROR "ICU not found")
+    #endif ()
+    #target_include_directories(etsuko PRIVATE ${ICU_INCLUDE_DIR})
+    #target_link_libraries(etsuko PRIVATE ${ICU_LIBRARY})
 
     # -lm
     target_link_libraries(etsuko PRIVATE m)
@@ -111,19 +109,21 @@ else ()
         target_compile_options(etsuko PRIVATE "-g0")
     endif ()
 
-    target_link_options(etsuko PRIVATE "-Wl,-dead_strip")
-
     add_custom_command(TARGET etsuko POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_directory
             ${CMAKE_SOURCE_DIR}/assets
             $<TARGET_FILE_DIR:etsuko>/assets
     )
 
-    add_custom_command(TARGET etsuko POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_directory
-            ${CMAKE_SOURCE_DIR}/assets_dbg
-            $<TARGET_FILE_DIR:etsuko>/assets
-    )
+    if (EXISTS ${CMAKE_SOURCE_DIR}/assets_dbg)
+        add_custom_command(TARGET etsuko POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_directory
+                ${CMAKE_SOURCE_DIR}/assets_dbg
+                $<TARGET_FILE_DIR:etsuko>/assets
+        )
+    else ()
+        message(STATUS "assets_dbg directory not found, skipping")
+    endif ()
 
     target_include_directories(etsuko PRIVATE
             ${CMAKE_SOURCE_DIR}/src
